<resources>
    <string name="app_name">Erp Admin</string>

    <!--server messages-->
    <string name="error_server_no_response">No response</string>
    <string name="error_server_400bad_request">Sorry! Bad data</string>
    <string name="error_server_401unaunthorized">Sorry! You\'re not authorized for this</string>
    <string name="error_server_403forbidden">Sorry! You\'re not allowed to take this action</string>
    <string name="error_server_405forbidden">Sorry! Action not allowed</string>
    <string name="error_server_500internal_error">Sorry! Server internal error</string>
    <string name="error_server_503unavailable">Sorry! Service unavailable</string>
    <string name="error_general">Sorry! Something went wrong</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label_or">Or</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="hint_confirm_password">Confirm password..</string>
    <string name="hint_enter_password">Enter password..</string>
    <string name="hint_enter_email">Enter email..</string>
    <string name="msg_no_internet">No internet connection!</string>
    <string name="msg_email_empty">Email can\'t be empty!</string>
    <string name="msg_valid_email">Enter valid email!</string>
    <string name="msg_passwod_empty">Password can\'t be empty!</string>
    <string name="msg_password_valid">Password should be grater than 6 and less then 15 characters!</string>
    <string name="msg_confirm_password_empty">Confirm password can\'t be empty!</string>
    <string name="msg_mismatched_confirm_password">Not matched with password, check and re-enter!</string>
</resources>
